--- a/public/admin_panel.html
+++ b/public/admin_panel.html
@@ -149,7 +149,11 @@
   </div>
 
   <script>
-  const BACKEND = 'http://localhost:5000';
+ // Automatically detect backend URL
+const BACKEND = window.location.origin.includes('render.com') || 
+                window.location.origin.includes('onrender.com') 
+                ? window.location.origin 
+                : 'http://localhost:5000';
   let allReports = [];
   let filteredReports = [];
 
