--- a/public/gallery.html
+++ b/public/gallery.html
@@ -180,7 +180,11 @@
   </footer>
 
   <script>
-  const BACKEND = 'http://localhost:5000';
+  // Automatically detect backend URL
+const BACKEND = window.location.origin.includes('render.com') || 
+                window.location.origin.includes('onrender.com') 
+                ? window.location.origin 
+                : 'http://localhost:5000';
 
   async function loadGallery() {
     try {
