--- a/public/report.html
+++ b/public/report.html
@@ -118,7 +118,11 @@
   </div>
 
   <script>
-  const BACKEND = "http://localhost:5000";
+  // Automatically detect backend URL
+const BACKEND = window.location.origin.includes('render.com') || 
+                window.location.origin.includes('onrender.com') 
+                ? window.location.origin 
+                : 'http://localhost:5000';
 
   // IMAGE UPLOAD
   document.getElementById('uploadArea').addEventListener('click', () => {
